feat: moved to ts

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,33 @@
 # Environment: development or production
-APP_ENV=development # or 'production' . Gets overridden by npm run dev or npm run prod
+APP_ENV=development # This will be overridden by npm scripts like npm run dev/prod
 
-# Assumes a single db with multiple tables. 
-SUPABASE_DB_URL=
-SUPABASE_KEY=
 
-# If you don't set these, config.js will use 'wa_um_messages' and 'wa_as_messages'
-PROD_MESSAGES_TABLE=
-DEV_MESSAGES_TABLE=
+# Optional: Specific table names if they differ from defaults
+# If you don't set these, config.js will use 'messages_prod' and 'messages_dev'
+PROD_MESSAGES_TABLE=wa_um_messages
+DEV_MESSAGES_TABLE=wa_as_messages
+
+
+DATABASE_URL_UNPOOLED=
+
+# Parameters for constructing your own connection string
+PGHOST=
+PGHOST_UNPOOLED=
+PGUSER=
+PGDATABASE=
+PGPASSWORD=
+
+# Parameters for Vercel Postgres Templates
+POSTGRES_URL=
+POSTGRES_URL_NON_POOLING=
+POSTGRES_USER=
+POSTGRES_HOST=
+POSTGRES_PASSWORD=
+POSTGRES_DATABASE=
+POSTGRES_URL_NO_SSL=
+POSTGRES_PRISMA_URL=
+
+# Neon Auth environment variables for Next.js
+NEXT_PUBLIC_STACK_PROJECT_ID=
+NEXT_PUBLIC_STACK_PUBLISHABLE_CLIENT_KEY=
+STACK_SECRET_SERVER_KEY=
