--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,10 @@ node_modules/
 
 package-lock.json
 
+# Session data for whatsapp-web.js
 .wwebjs_auth/
 .wwebjs_cache/
+src/session/
 
 wa_as_messages.csv
 wa_um_messages.csv
