--- a/.env.example
+++ b/.env.example
@@ -31,3 +31,5 @@ POSTGRES_PRISMA_URL=
 NEXT_PUBLIC_STACK_PROJECT_ID=
 NEXT_PUBLIC_STACK_PUBLISHABLE_CLIENT_KEY=
 STACK_SECRET_SERVER_KEY=
+
+GEMINI_API_KEY=
