--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "csv-writer": "^1.6.0",
     "dotenv": "^16.5.0",
     "module-alias": "^2.2.3",
